--- a/restaurante/Snacks.html
+++ b/restaurante/Snacks.html
@@ -39,9 +39,9 @@
                     <p>$2.50</p>
                     <p>25 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue(-1)">-</button>
+                        <input type="number" id="counterInput" value="0" min="0" readonly>
+                        <button onclick="changeValue(1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
@@ -51,9 +51,9 @@
                     <p>$3.50</p>
                     <p>15 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue(-1)">-</button>
+                        <input type="number" id="counterInput" value="0" min="0" readonly>
+                        <button onclick="changeValue(1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
@@ -63,9 +63,9 @@
                     <p>$5.00</p>
                     <p>10 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue(-1)">-</button>
+                        <input type="number" id="counterInput" value="0" min="0" readonly>
+                        <button onclick="changeValue(1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
