--- a/restaurante/pizza.html
+++ b/restaurante/pizza.html
@@ -51,9 +51,9 @@
                     <p>$9.00</p>
                     <p>12 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue(-1)">-</button>
+                        <input type="number" id="counterInput" value="0" min="0" readonly>
+                        <button onclick="changeValue(1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
@@ -63,9 +63,9 @@
                     <p>$8.50</p>
                     <p>8 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue(-1)">-</button>
+                        <input type="number" id="counterInput" value="0" min="0" readonly>
+                        <button onclick="changeValue(1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
