--- a/restaurante/perro caliente.html
+++ b/restaurante/perro caliente.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Perro Caliente</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="cate.html"></script>
+
 </head>
 <body>
     <aside>
@@ -39,9 +41,9 @@
                     <p>$3.50</p>
                     <p>12 Disponibles</p>
                     <div class="contador">
-                        <button>-</button>
-                        <span>1</span>
-                        <button>+</button>
+                        <button onclick="changeValue('counterclasico', -1)">-</button>
+                        <input type="number" id="counterclasico" value="1" min="0">
+                        <button onclick="changeValue('counterclasico', 1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
@@ -51,9 +53,9 @@
                     <p>$4.00</p>
                     <p>10 Disponibles</p>
                     <div class="contador">
-                        <button onclick="changeValue(-1)">-</button>
-                        <input type="number" id="counterInput" value="0" min="0" readonly>
-                        <button onclick="changeValue(1)">+</button>
+                        <button onclick="changeValue('counterespecial', -1)">-</button>
+                        <input type="number" id="counterespecial" value="1" min="0">
+                        <button onclick="changeValue('counterespecial', 1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
@@ -63,9 +65,9 @@
                     <p>$4.50</p>
                     <p>8 Disponibles</p>
                     <div class="contador">
-                        <button onclick="changeValue(-1)">-</button>
-                        <input type="number" id="counterInput" value="0" min="0" readonly>
-                        <button onclick="changeValue(1)">+</button>
+                        <button onclick="changeValue('todo', -1)">-</button>
+                        <input type="number" id="todo" value="1" min="0">
+                        <button onclick="changeValue('todo', 1)">+</button>
                     </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
