--- a/restaurante/pizza.html
+++ b/restaurante/pizza.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Pizza</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="cate.html"></script>
-
+    <script src="cate.js" defer></script>
 </head>
 <body>
     <aside>
@@ -27,7 +26,7 @@
         <nav>
             <button onclick="window.location.href='pizza.html'">Pizza</button>
             <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro caliente.html'">Perro Caliente</button>
+            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
             <button onclick="window.location.href='snacks.html'">Snacks</button>
             <button onclick="window.location.href='bebidas.html'">Bebidas</button>
         </nav>
@@ -35,40 +34,25 @@
         <section class="menu-items">
             <h2>Elige tu Pizza</h2>
             <div class="menu-grid">
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Pizza Margarita" data-precio="8.00">
                     <img src="margarita.jpg" alt="Pizza Margarita">
                     <h3>Pizza Margarita</h3>
-                    <p>$8.00</p>
+                    <p>Precio: $8.00</p>
                     <p>10 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('countermarga', -1)">-</button>
-                        <input type="number" id="countermarga" value="1" min="0">
-                        <button onclick="changeValue('countermarga', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Pizza Pepperoni" data-precio="9.00">
                     <img src="peperoni.png" alt="Pizza Pepperoni">
                     <h3>Pizza Pepperoni</h3>
-                    <p>$9.00</p>
+                    <p>Precio: $9.00</p>
                     <p>12 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('counterpepe', -1)">-</button>
-                        <input type="number" id="counterpepe" value="1" min="0">
-                        <button onclick="changeValue('counterpepe', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Pizza Vegetariana" data-precio="8.50">
                     <img src="vegetariana.jpg" alt="Pizza Vegetariana">
                     <h3>Pizza Vegetariana</h3>
-                    <p>$8.50</p>
+                    <p>Precio: $8.50</p>
                     <p>8 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('vegeta', -1)">-</button>
-                        <input type="number" id="vegeta" value="1" min="0">
-                        <button onclick="changeValue('vegeta', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
             </div>
@@ -76,13 +60,12 @@
 
         <section class="cart">
             <h2>Carrito de Compras</h2>
-            <div class="cart-items"></div> <!-- Aquí se agregarán los productos -->
+            <div class="cart-items"></div>
             <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
             <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
             <p><strong>Total:</strong> <span id="total">$0.00</span></p>
             <button class="print-bill">Imprimir Factura</button>
         </section>
-        
     </div>
 </body>
 </html>
