--- a/restaurante/Bebidas.html
+++ b/restaurante/Bebidas.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Bebidas</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="cate.html"></script>
+    <script src="cate.js" defer></script>
 </head>
 <body>
-    
     <aside>
         <ul>
             <li><a href="Home.html">Home</a></li>
@@ -17,6 +16,7 @@
             <li><a href="DevsPage.html">Nuestro Equipo</a></li>
         </ul>
     </aside>
+    
     <div class="main-content">
         <header>
             <input type="text" placeholder="Buscar categoría o menú">
@@ -76,23 +76,11 @@
         <section class="cart">
             <h2>Carrito de Compras</h2>
             <div class="cart-items">
-                <div class="cart-item">
-                    <p>Orange Juice (4) - $2.87 c/u</p>
-                    <p>Total: $11.48</p>
-                </div>
-                <div class="cart-item">
-                    <p>American Favorite (1) - $4.87</p>
-                </div>
-                <div class="cart-item">
-                    <p>Super Supreme (1) - $5.75</p>
-                </div>
-                <div class="cart-item">
-                    <p>Favorite Cheese (1) - $6.75</p>
-                </div>
+                <p><strong>Carrito vacío</strong></p>
             </div>
-            <p><strong>Subtotal:</strong> $28.67</p>
-            <p><strong>Tax (10%):</strong> $2.86</p>
-            <p><strong>Total:</strong> $31.53</p>
+            <p><strong>Subtotal:</strong> $0.00</p>
+            <p><strong>Tax (10%):</strong> $0.00</p>
+            <p><strong>Total:</strong> $0.00</p>
             <button class="print-bill">Imprimir Factura</button>
         </section>
     </div>
