--- a/restaurante/Snacks.html
+++ b/restaurante/Snacks.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Snacks</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="cate.html"></script>
-
+    <script defer src="cate.js"></script>
 </head>
 <body>
     <aside>
@@ -27,7 +26,7 @@
         <nav>
             <button onclick="window.location.href='pizza.html'">Pizza</button>
             <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro caliente.html'">Perro Caliente</button>
+            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
             <button onclick="window.location.href='snacks.html'">Snacks</button>
             <button onclick="window.location.href='bebidas.html'">Bebidas</button>
         </nav>
@@ -35,40 +34,25 @@
         <section class="menu-items">
             <h2>Elige tu Snack</h2>
             <div class="menu-grid">
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Papas Fritas" data-precio="2.50">
                     <img src="papas.jpg" alt="Papas Fritas">
                     <h3>Papas Fritas</h3>
                     <p>$2.50</p>
                     <p>25 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('papas', -1)">-</button>
-                        <input type="number" id="papas" value="1" min="0">
-                        <button onclick="changeValue('papas', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Nachos con Queso" data-precio="3.50">
                     <img src="nachos.jpg" alt="Nachos con Queso">
                     <h3>Nachos con Queso</h3>
                     <p>$3.50</p>
                     <p>15 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('nachos', -1)">-</button>
-                        <input type="number" id="nachos" value="1" min="0">
-                        <button onclick="changeValue('nachos', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Alitas BBQ" data-precio="5.00">
                     <img src="alitas.jpg" alt="Alitas BBQ">
                     <h3>Alitas BBQ</h3>
                     <p>$5.00</p>
                     <p>10 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('bbq', -1)">-</button>
-                        <input type="number" id="bbq" value="1" min="0">
-                        <button onclick="changeValue('bbq', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
             </div>
@@ -76,24 +60,10 @@
 
         <section class="cart">
             <h2>Carrito de Compras</h2>
-            <div class="cart-items">
-                <div class="cart-item">
-                    <p>Orange Juice (4) - $2.87 c/u</p>
-                    <p>Total: $11.48</p>
-                </div>
-                <div class="cart-item">
-                    <p>American Favorite (1) - $4.87</p>
-                </div>
-                <div class="cart-item">
-                    <p>Super Supreme (1) - $5.75</p>
-                </div>
-                <div class="cart-item">
-                    <p>Favorite Cheese (1) - $6.75</p>
-                </div>
-            </div>
-            <p><strong>Subtotal:</strong> $28.67</p>
-            <p><strong>Tax (10%):</strong> $2.86</p>
-            <p><strong>Total:</strong> $31.53</p>
+            <div class="cart-items"></div>
+            <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
+            <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
+            <p><strong>Total:</strong> <span id="total">$0.00</span></p>
             <button class="print-bill">Imprimir Factura</button>
         </section>
     </div>
