--- a/restaurante/perro caliente.html
+++ b/restaurante/perro caliente.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Perro Caliente</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="cate.html"></script>
-
+    <script defer src="cate.js"></script>
 </head>
 <body>
     <aside>
@@ -27,7 +26,7 @@
         <nav>
             <button onclick="window.location.href='pizza.html'">Pizza</button>
             <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro caliente.html'">Perro Caliente</button>
+            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
             <button onclick="window.location.href='snacks.html'">Snacks</button>
             <button onclick="window.location.href='bebidas.html'">Bebidas</button>
         </nav>
@@ -35,65 +34,36 @@
         <section class="menu-items">
             <h2>Elige tu Perro Caliente</h2>
             <div class="menu-grid">
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Perro Clásico" data-precio="3.50">
                     <img src="perro.jpg" alt="Perro Clásico">
                     <h3>Perro Clásico</h3>
                     <p>$3.50</p>
                     <p>12 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('counterclasico', -1)">-</button>
-                        <input type="number" id="counterclasico" value="1" min="0">
-                        <button onclick="changeValue('counterclasico', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Perro Especial" data-precio="4.00">
                     <img src="especial.jpg" alt="Perro Especial">
                     <h3>Perro Especial</h3>
                     <p>$4.00</p>
                     <p>10 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('counterespecial', -1)">-</button>
-                        <input type="number" id="counterespecial" value="1" min="0">
-                        <button onclick="changeValue('counterespecial', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-nombre="Perro con Todo" data-precio="4.50">
                     <img src="todo.jpg" alt="Perro con Todo">
                     <h3>Perro con Todo</h3>
                     <p>$4.50</p>
                     <p>8 Disponibles</p>
-                    <div class="contador">
-                        <button onclick="changeValue('todo', -1)">-</button>
-                        <input type="number" id="todo" value="1" min="0">
-                        <button onclick="changeValue('todo', 1)">+</button>
-                    </div>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
             </div>
         </section>
-        
+
         <section class="cart">
             <h2>Carrito de Compras</h2>
-            <div class="cart-items">
-                <div class="cart-item">
-                    <p>Orange Juice (4) - $2.87 c/u</p>
-                    <p>Total: $11.48</p>
-                </div>
-                <div class="cart-item">
-                    <p>American Favorite (1) - $4.87</p>
-                </div>
-                <div class="cart-item">
-                    <p>Super Supreme (1) - $5.75</p>
-                </div>
-                <div class="cart-item">
-                    <p>Favorite Cheese (1) - $6.75</p>
-                </div>
-            </div>
-            <p><strong>Subtotal:</strong> $28.67</p>
-            <p><strong>Tax (10%):</strong> $2.86</p>
-            <p><strong>Total:</strong> $31.53</p>
+            <div class="cart-items"></div>
+            <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
+            <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
+            <p><strong>Total:</strong> <span id="total">$0.00</span></p>
             <button class="print-bill">Imprimir Factura</button>
         </section>
     </div>
