--- a/restaurante/Hamburguesa.html
+++ b/restaurante/Hamburguesa.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú - Hamburguesa</title>
+    <title>Menú - Bebidas</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="cate.js" defer></script>
 </head>
 <body>
     <aside>
@@ -32,39 +32,32 @@
         </nav>
 
         <section class="menu-items">
-            <h2>Elige tu Hamburguesa</h2>
+            <h2>Elige tu Bebida</h2>
             <div class="menu-grid">
-                <div class="menu-item" data-name="Hamburguesa Clásica" data-price="6.50">
-                    <img src="clasica.jpg" alt="Hamburguesa Clásica">
-                    <h3>Hamburguesa Clásica</h3>
-                    <p>$6.50</p>
-                    <p>10 Disponibles</p>
+                <div class="menu-item" data-name="Coca Cola" data-price="1.50">
+                    <img src="coca.jpg" alt="Coca Cola">
+                    <h3>Coca Cola</h3>
+                    <p>$1.50</p>
+                    <p>20 Disponibles</p>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item" data-name="Hamburguesa con Queso" data-price="7.00">
-                    <img src="queso.jpg" alt="Hamburguesa con Queso">
-                    <h3>Hamburguesa con Queso</h3>
-                    <p>$7.00</p>
-                    <p>8 Disponibles</p>
+                <div class="menu-item" data-name="Jugo de Naranja" data-price="2.00">
+                    <img src="naranja.jpg" alt="Jugo de Naranja">
+                    <h3>Jugo de Naranja</h3>
+                    <p>$2.00</p>
+                    <p>15 Disponibles</p>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
-                <div class="menu-item" data-name="Hamburguesa con Bacon" data-price="7.50">
-                    <img src="bacon.jpg" alt="Hamburguesa con Bacon">
-                    <h3>Hamburguesa con Bacon</h3>
-                    <p>$7.50</p>
-                    <p>5 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-                <div class="menu-item" data-name="Hamburguesa Vegana" data-price="7.00">
-                    <img src="vegana.jpg" alt="Hamburguesa Vegana">
-                    <h3>Hamburguesa Vegana</h3>
-                    <p>$7.00</p>
-                    <p>12 Disponibles</p>
+                <div class="menu-item" data-name="Agua" data-price="1.00">
+                    <img src="agua.jpg" alt="Agua">
+                    <h3>Agua</h3>
+                    <p>$1.00</p>
+                    <p>30 Disponibles</p>
                     <button class="agregar-carrito">Agregar al carrito</button>
                 </div>
             </div>
         </section>
-        
+
         <section class="cart">
             <h2>Carrito de Compras</h2>
             <div class="cart-items"></div>
