--- a/restaurante/Hamburguesa.html
+++ b/restaurante/Hamburguesa.html
@@ -25,8 +25,8 @@
 
         <nav>
             <button onclick="window.location.href='pizza.html'">Pizza</button>
-            <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro_caliente.html'">Perro Caliente</button>
+            <button onclick="window.location.href='Hamburguesa.html'">Hamburguesa</button>
+            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
             <button onclick="window.location.href='snacks.html'">Snacks</button>
             <button onclick="window.location.href='bebidas.html'">Bebidas</button>
         </nav>
