--- a/restaurante/pizza.html
+++ b/restaurante/pizza.html
@@ -11,7 +11,7 @@
     <aside>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Categorias.html">Categoría</a></li>
+            <li><a href="pizza.html">Categoría</a></li>
             <li><a href="Carrito.html">Carrito de Compras</a></li>
             <li><a href="DevsPage.html">Nuestro Equipo</a></li>
         </ul>
@@ -27,8 +27,8 @@
             <button onclick="window.location.href='pizza.html'">Pizza</button>
             <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
             <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
-            <button onclick="window.location.href='snacks.html'">Snacks</button>
-            <button onclick="window.location.href='bebidas.html'">Bebidas</button>
+            <button onclick="window.location.href='Snacks.html'">Snacks</button>
+            <button onclick="window.location.href='Bebidas.html'">Bebidas</button>
         </nav>
 
         <section class="menu-items">
