--- a/restaurante/Categorias.html
+++ b/restaurante/Categorias.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <aside>
+    <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="pizza.html">Categoría</a></li>
             <li><a href="Carrito.html">Carrito de Compras</a></li>
             <li><a href="DevsPage.html">Nuestro Equipo</a></li>
         </ul>
-    </aside>
+    </header>
     <div class="main-content">
         <nav>
             <button onclick="window.location.href='pizza.html'">Pizza</button>
