--- a/restaurante/Home.html
+++ b/restaurante/Home.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <aside>
+        <header>
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="pizza.html">Categoría</a></li>
@@ -17,7 +17,7 @@
                 <li><a href="DevsPage.html">Nuestro Equipo</a></li>
             </ul>
             
-        </aside>
+        </header>
         <main>
             <div class="portada">
                 <h2 class="texto">🔥 ¡Bienvenido a Sabor Express, donde cada bocado es una explosión de sabor! 🍔🍟🌭
