--- a/restaurante/DevsPage.html
+++ b/restaurante/DevsPage.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <aside>
+    <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="pizza.html">Categoría</a></li>
             <li><a href="Carrito.html">Carrito de Compras</a></li>
             <li><a href="bebidas.html">Menú</a></li>
         </ul>
-    </aside>
+    </header>
     
     <div class="main-content">
         <header>
